<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asunto"
        android:textColor="@color/cya_dark"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailSubject"
        android:id="@+id/asunto"
        android:shadowColor="@color/cya_dark"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensaje"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/cya_dark" />
    <EditText
        android:id="@+id/mensaje"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="5"
        android:shadowColor="@color/cya_dark"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/boton_enviar"
        android:background="@drawable/boton_normal"
        android:text="@string/enviar"/>
</LinearLayout>