<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gt.redciudadana.congresoabierto.InicioFragment"
    >

    <TableRow
        android:layout_weight="1">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginTop="20dp">
            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/btnRepr"
                android:layout_gravity="center"
                android:onClick="clickMenu"
                android:background="@drawable/boton_circular"
                android:src="@drawable/representante"
                android:scaleType="fitXY"
                 />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/representante"
                android:textColor="#000"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginTop="20dp">
            <ImageButton
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/btnComisiones"
                android:onClick="clickMenu"
                android:background="@drawable/boton_circular"
                android:src="@drawable/comisiones"
                android:scaleType="fitXY" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/comisiones"
                android:textColor="#000"
                android:gravity="center"/>
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_weight="1">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginTop="20dp">
            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:id="@+id/btnNoticias"
                android:onClick="clickMenu"
                android:background="@drawable/boton_circular"
                android:src="@drawable/noticias"
                android:scaleType="fitXY"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/tuvoz"
                android:textColor="#000"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp">
            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:id="@+id/btnContacto"
                android:onClick="clickMenu"
                android:background="@drawable/boton_circular"
                android:src="@drawable/contacto"
                android:scaleType="fitXY"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/contacto"
                android:textColor="#000"
                android:gravity="center"/>
        </LinearLayout>
    </TableRow>


</TableLayout>
